# mychannel

./: CD_SETUP.md  CMakeLists.txt  MCP_README.md  README.md  flake.nix  result  test_client.html  test_mcp_demo.sh
.github/workflows/: ci.yml
deploy/: deploy.sh  setup.sh  webhook-server.py  webhook.service
src/: http_server.cpp  http_server.hpp  main.cpp  mcp_server.cpp  mcp_server.hpp  media_info.cpp  media_info.hpp  media_queue.cpp  media_queue.hpp  streaming.cpp  streaming.hpp  streaming_config.hpp  utils.cpp  utils.hpp
tests/: test_mcp_debug.cpp  test_mcp_json_parsing.cpp  test_mcp_tools_call.cpp
videos/: video1_5s.webm
